<resources>
    <string name="app_name">Day09</string>
    <string name="button_title_add">Add</string>
    <string name="button_title_edit">Edit</string>
    <string name="button_title_delete">Delete</string>
    <string name="button_title_show">Show List</string>
    <string name="text_name">input name</string>
    <string name="text_price">input price</string>
    <string name="text_number">input number</string>
    <string name="text_id">input id</string>
</resources>